@@ -1,3 +1,4 @@
+ls
 # JOE syntax highlight file for Python
 
 # TODO:
@@ -6,8 +7,8 @@
 
 =Idle
 =Comment 	green
-=Docstring	green
-=DocEscape	bold green
+=Docstring	cyan
+=DocEscape	bold cyan
 =Constant 	cyan
 =Escape 	bold cyan
 =Keyword 	bold
